<resources>
    <string name="app_name">hw___1</string>
    <string name="title">Playlist maker</string>
    <string name="button1">Поиск</string>
    <string name="button2">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="rules">Пользовательское соглашение</string>

</resources>