<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/some_id"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:text="@string/title"
        android:textAppearance="@style/title" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="@color/white"
        android:text="@string/button1"
        android:textAppearance="@style/title"
        android:textColor="@color/black"
        android:visibility="visible"
        app:cornerRadius="15dp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="@color/white"
        android:text="@string/button2"
        android:textAppearance="@style/title"
        android:textColor="@color/black"
        android:visibility="visible"
        app:cornerRadius="15dp"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black" />
    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textAppearance="@style/title"
        android:textColor="@color/black"
        android:visibility="visible"
        app:cornerRadius="15dp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black" />



</LinearLayout>