<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_settings_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="?android:attr/selectableItemBackground"
            app:icon="@drawable/back"
            app:iconGravity="start"
            app:iconTint="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="6"
            android:text="@string/settings"
            android:textAppearance="@style/buttons" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="6"
            android:text="@string/dark"
            android:textAppearance="@style/settings_style" />

        <Switch
            android:id="@+id/button_settings_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="?android:attr/selectableItemBackground"
/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="6"
            android:text="@string/share"
            android:textAppearance="@style/settings_style" />

        <Button
            android:id="@+id/button_settings_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="?android:attr/selectableItemBackground"
            app:icon="@drawable/share"
            app:iconGravity="start"
            app:iconTint="@color/gray"/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="6"
            android:text="@string/support"
            android:textAppearance="@style/settings_style" />

        <Button
            android:id="@+id/button_settings_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="?android:attr/selectableItemBackground"
            app:icon="@drawable/support"
            app:iconGravity="start"
            app:iconTint="@color/gray" />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginBottom="400dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="6"
            android:text="@string/rules"
            android:textAppearance="@style/settings_style" />

        <Button
            android:id="@+id/button_settings_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="?android:attr/selectableItemBackground"
            app:icon="@drawable/arrow"
            app:iconGravity="start"
            app:iconTint="@color/gray"/>




    </LinearLayout>



</LinearLayout>